make minor edits

--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
 		"stylelint": "stylelint \"src/**/*.scss\"",
 		"stylelint:fix": "stylelint \"src/**/*.scss\" --fix",
 		"lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
+		"check": "prettier --check \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\" --ignore-path ./.prettierignore",
 		"format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\" --ignore-path ./.prettierignore",
+		"formatFile": "prettier --write",
 		"test": "npm run stylelint:fix && npm run lint && npm run format",
 		"prepare": "husky install",
 		"commit": "npm run test && cz",
